deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-sample
  labels:
    app: python-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-sample
  template:
    metadata:
      labels:
        app: python-sample
    spec:
      containers:
      - name: pythonapp
        image: python-sample
        ports:
        - containerPort: 8000
