service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalncer
  selector:
    app: python-sample
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
